--- a/themes/Sw-blog/layout/_partial/footer.ejs
+++ b/themes/Sw-blog/layout/_partial/footer.ejs
@@ -5,7 +5,7 @@
                 &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
             </div>
             <div class="footer-right">
-                More Themes in <a href="http://hexo.io/" target="_blank">Hexo</a>^-^&nbsp &nbsp And welcome to <a href="https://www.skyli-blog.cn/" target="_blank">skyli-blog</a>
+                More Themes in <a href="http://hexo.io/" target="_blank">Hexo</a> ^_^ And welcome to <a href="https://www.skyli-blog.cn/" target="_blank">skyli-blog</a>
             </div>
         </div>
         <% if (theme.visit_counter.on) { %>
