--- a/themes/Sw-blog/source/css/style.styl
+++ b/themes/Sw-blog/source/css/style.styl
@@ -126,7 +126,7 @@ if sidebar
   @import "_partial/sidebar"
 
 body{
-  background: url("../img/Lake.jpg");
+  background: url("../img/Snow.jpg");
   background-size: cover;
   background-attachment: fixed;
   color: #000;
