--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2382,7 +2382,7 @@ color
   font-size: 1.8em;
 }
 .archives-wrap .archive-year-wrap a {
-  color: #999;
+  color: #555;
   font-weight: bold;
   padding-left: 48px;
 }
@@ -2407,7 +2407,7 @@ color
 }
 .archives .archive-article-title {
   font-size: 16px;
-  color: #999;
+  color: #333;
   -webkit-transition: color 0.3s;
   -moz-transition: color 0.3s;
   -ms-transition: color 0.3s;
@@ -2440,13 +2440,13 @@ color
   position: relative;
   float: right;
   margin-top: -10px;
-  color: #555;
+  color: #333;
   background: none;
   text-align: right;
   width: auto;
 }
 .archive-article-inner .article-meta .article-date time {
-  color: #aaa;
+  color: #020202;
 }
 .archive-article-inner .article-meta .archive-article-date,
 .archive-article-inner .article-meta .article-tag-list {
@@ -2455,7 +2455,7 @@ color
   display: inline-block;
   vertical-align: middle;
   zoom: 1;
-  color: #999;
+  color: #333;
   font-size: 14px;
 }
 .archive-article-inner .article-meta .archive-article-date {
@@ -2466,7 +2466,7 @@ color
 }
 .archive-article-inner .article-meta .archive-article-date time:before {
   content: "\f073";
-  color: #999;
+  color: #333;
   position: relative;
   margin-right: 10px;
   font: 16px FontAwesome;
@@ -3086,7 +3086,7 @@ a.gitment-editor-footer-tip:hover {
   padding: 1px 3px;
   margin: 0 3px;
   color: #999;
-  background: #002b36;
+  background: rgba(91,192,222,0.6);
   border: 1px dashed #ccc;
   border-radius: 3px;
   font-family: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
@@ -3182,7 +3182,7 @@ a.gitment-editor-footer-tip:hover {
 }
 .article-entry code {
   color: #999;
-  background: #002b36;
+  background: rgba(91,192,222,0.6);
   padding: 1px 3px;
   border-radius: 5px;
 }
@@ -3546,7 +3546,7 @@ a.gitment-editor-footer-tip:hover {
   font-size: 1.8em;
 }
 .archives-wrap .archive-year-wrap a {
-  color: #999;
+  color: #555;
   font-weight: bold;
   padding-left: 48px;
 }
@@ -3571,7 +3571,7 @@ a.gitment-editor-footer-tip:hover {
 }
 .archives .archive-article-title {
   font-size: 16px;
-  color: #999;
+  color: #333;
   -webkit-transition: color 0.3s;
   -moz-transition: color 0.3s;
   -ms-transition: color 0.3s;
@@ -3604,13 +3604,13 @@ a.gitment-editor-footer-tip:hover {
   position: relative;
   float: right;
   margin-top: -10px;
-  color: #555;
+  color: #333;
   background: none;
   text-align: right;
   width: auto;
 }
 .archive-article-inner .article-meta .article-date time {
-  color: #aaa;
+  color: #020202;
 }
 .archive-article-inner .article-meta .archive-article-date,
 .archive-article-inner .article-meta .article-tag-list {
@@ -3619,7 +3619,7 @@ a.gitment-editor-footer-tip:hover {
   display: inline-block;
   vertical-align: middle;
   zoom: 1;
-  color: #999;
+  color: #333;
   font-size: 14px;
 }
 .archive-article-inner .article-meta .archive-article-date {
@@ -3630,7 +3630,7 @@ a.gitment-editor-footer-tip:hover {
 }
 .archive-article-inner .article-meta .archive-article-date time:before {
   content: "\f073";
-  color: #999;
+  color: #333;
   position: relative;
   margin-right: 10px;
   font: 16px FontAwesome;
@@ -3660,7 +3660,7 @@ a.gitment-editor-footer-tip:hover {
 }
 .article-entry pre,
 .article-entry .highlight {
-  background: #002b36;
+  background: #00285b;
   margin: 10px 0;
   padding: 10px 10px;
   overflow: auto;
@@ -3669,7 +3669,7 @@ a.gitment-editor-footer-tip:hover {
 }
 .article-entry .highlight .gutter pre,
 .article-entry .gist .gist-file .gist-data .line-numbers {
-  color: #9e90ff;
+  color: #9ff;
 }
 .article-entry pre,
 .article-entry code {
@@ -3691,7 +3691,7 @@ a.gitment-editor-footer-tip:hover {
   box-sizing: border-box;
 }
 .article-entry code {
-  background: #002b36;
+  background: rgba(91,192,222,0.6);
   padding: 0 0.3em;
   border: none;
 }
@@ -3714,7 +3714,7 @@ a.gitment-editor-footer-tip:hover {
   border-radius: 5px;
   font-family: Consolas, "Courier New", Courier;
   text-shadow: none;
-  background-color: #002b36;
+  background-color: rgba(91,192,222,0.6);
   word-wrap: break-word;
   white-space: pre;
 }
@@ -3872,7 +3872,7 @@ a.gitment-editor-footer-tip:hover {
 }
 .article-entry .highlight figcaption {
   font-size: 0.85em;
-  color: #75715e;
+  color: #7285b7;
   line-height: 1em;
   margin-bottom: 1em;
 }
@@ -3903,7 +3903,7 @@ a.gitment-editor-footer-tip:hover {
   border-style: solid;
   border-color: #ddd;
   border-width: 1px 0;
-  background: #002b36;
+  background: #00285b;
   padding: 15px 20px 15px 0;
 }
 .article-entry .gist .gist-file {
@@ -3929,8 +3929,8 @@ a.gitment-editor-footer-tip:hover {
   border: none;
 }
 .article-entry .gist .gist-file .gist-meta {
-  background: #002b36;
-  color: #75715e;
+  background: #00285b;
+  color: #7285b7;
   font: 0.85em "Lucida Grande", Verdana, "Helvetica Neue", Arial, sans-serif;
   text-shadow: 0 0;
   padding: 0;
@@ -3965,10 +3965,10 @@ pre .command {
   color: #258fb8;
 }
 pre .comment {
-  color: #75715e;
+  color: #7285b7;
 }
 pre .keyword {
-  color: #66d9ef;
+  color: #ebbbff;
 }
 pre .function,
 pre .class .params {
@@ -3977,18 +3977,18 @@ pre .class .params {
 pre .params,
 pre .function,
 pre .css .value {
-  color: #fd971f;
+  color: #ffc58f;
 }
 pre .css ~ * .tag,
 pre .at_rule,
 pre .preprocessor {
-  color: #f92672;
+  color: #ffeead;
 }
 pre .built_in,
 pre .class,
 pre .css ~ * .class,
 pre .function {
-  color: #a6e22e;
+  color: #bbdaff;
 }
 pre .value,
 pre .number {
@@ -3996,7 +3996,7 @@ pre .number {
 }
 pre .id,
 pre .css ~ * .id {
-  color: #fd971f;
+  color: #ffc58f;
 }
 pre .link_label,
 pre .code,
@@ -4007,7 +4007,7 @@ pre .link_url {
 #footer {
   font-size: 12px;
   font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
-  color: #999;
+  color: #333;
   position: absolute;
   bottom: 30px;
   width: 100%;
@@ -4020,7 +4020,7 @@ pre .link_url {
   color: #fff;
 }
 #footer a:hover {
-  color: #999;
+  color: #333;
 }
 .footer-left {
   float: left;
@@ -5094,4 +5094,18 @@ pre .link_url {
     bottom: 0;
     margin: 0;
   }
+}
+body {
+  background: url("../img/Snow.jpg");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  color: #000;
+}
+#container .left-col {
+  background: none !important;
+}
+.article-title {
+  color: #000;
 }
